--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goals-ts",
+  "name": "TrainX",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "eslint": "^8.22.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-web": "~0.18.7",
+    "expo-updates": "~0.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
