--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "TrainX",
+  "name": "trainx",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -16,12 +17,13 @@
     "eslint": "^8.22.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-web": "~0.18.7",
-    "expo-updates": "~0.14.4"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
