--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "eslint": "^8.22.0",
     "expo": "~46.0.9",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.4",
     "react": "18.0.0",
